--- a/SWD/SWD/MainWindow.xaml
+++ b/SWD/SWD/MainWindow.xaml
@@ -22,8 +22,8 @@
         <Border Grid.Row="1" Grid.Column="0" Margin="10,20,0,0" BorderBrush="#FF9DAFB8" BorderThickness="1" >
             <Grid x:Name="dane" Grid.Row="1" Grid.Column="0" Background="White" Opacity="0.7">
                 <DataGrid x:Name="blok" ItemsSource="{Binding dt}">
-                    
-                </DataGrid> 
+
+                </DataGrid>
             </Grid>
         </Border>
         <Grid x:Name="menu" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,0,0,0">
@@ -74,7 +74,7 @@
                                     <Image Source="Pictures/b.png" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0"></Image>
                                 </Grid>
                             </Button>
-                            
+
                         </Border>
                         <Border Grid.Column="1" BorderBrush="#FF9DAFB8" BorderThickness="0,1,1,0">
                             <Button x:Name="zm_klas" Width="100" Grid.Column="1"  Background="{x:Null}" BorderBrush="{x:Null}" ToolTip="Zamiana danych tekstowych na numeryczne" Click="zm_klas_Click">
@@ -89,7 +89,7 @@
                             </Button>
                         </Border>
                         <Border Grid.Column="2" BorderBrush="#FF9DAFB8" BorderThickness="0,1,0,0">
-                            <Button x:Name="wyb_nom" Width="100" Grid.Column="2"  Background="{x:Null}" BorderBrush="{x:Null}" ToolTip="Preferowanie najliczniejszych klas" Foreground="#FF68CD8D">
+                            <Button x:Name="wyb_nom" Width="100" Grid.Column="2"  Background="{x:Null}" BorderBrush="{x:Null}" ToolTip="Preferowanie najliczniejszych klas" Foreground="#FF68CD8D" Click="wyb_nom_Click">
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
@@ -103,6 +103,7 @@
                     </Grid>
                     <Grid Grid.Row="2">
                         <TextBox Name="przedzial" Width="50" Height="20" HorizontalAlignment="Left" BorderBrush="black"></TextBox>
+                        <TextBox Name="liczKlas" Width="50" Height="20" HorizontalAlignment="Left" BorderBrush="black" Margin="201,0,0,0"></TextBox>
                     </Grid>
                 </Grid>
             </Border>
@@ -149,6 +150,51 @@
 
                 </Grid>
             </Border>
+            <Button x:Name="rys_wykres" Width="100"  Background="{x:Null}" BorderBrush="{x:Null}" ToolTip="Zmiana wartości z przedziału min-max na przedział zdefiniowany" Margin="10,19,365,0" Grid.Column="3" Click="rys_wykres_Click">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0" VerticalAlignment="Top" Padding="0" HorizontalAlignment="Center" Foreground="#FF68CD8D" Content="Wykres"/>
+                </Grid>
+            </Button>
+            <ComboBox x:Name="wybor_chart1"  Grid.Row="0" Grid.Column="3" Margin="115,19,154,47" IsEditable="True" IsReadOnly="True" Text="WYBIERZ KOLUMNĘ" Foreground="#FF08274B" SelectionChanged="wybor_SelectionChanged">
+                <ComboBox.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                        <GradientStop Color="White" Offset="0"/>
+                        <GradientStop Color="#FFEBEBEB" Offset="0.309"/>
+                        <GradientStop Color="#FFDDDDDD" Offset="0.515"/>
+                        <GradientStop Color="#FF7A9EA8" Offset="0.837"/>
+                        <GradientStop Color="#FF14B682" Offset="0.996"/>
+                    </LinearGradientBrush>
+                </ComboBox.Background>
+
+            </ComboBox>
+            <ComboBox x:Name="wybor_chart2"  Grid.Row="0" Grid.Column="3" Margin="115,46,154,20" IsEditable="True" IsReadOnly="True" Text="WYBIERZ KOLUMNĘ" Foreground="#FF08274B" SelectionChanged="wybor_SelectionChanged">
+                <ComboBox.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                        <GradientStop Color="White" Offset="0"/>
+                        <GradientStop Color="#FFEBEBEB" Offset="0.309"/>
+                        <GradientStop Color="#FFDDDDDD" Offset="0.515"/>
+                        <GradientStop Color="#FF7A9EA8" Offset="0.837"/>
+                        <GradientStop Color="#FF14B682" Offset="0.996"/>
+                    </LinearGradientBrush>
+                </ComboBox.Background>
+
+            </ComboBox>
+            <ComboBox x:Name="wybor_chart_klasa"  Grid.Row="0" Grid.Column="3" Margin="115,73,154,-7" IsEditable="True" IsReadOnly="True" Text="WYBIERZ KOLUMNĘ" Foreground="#FF08274B" SelectionChanged="wybor_SelectionChanged">
+                <ComboBox.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                        <GradientStop Color="White" Offset="0"/>
+                        <GradientStop Color="#FFEBEBEB" Offset="0.309"/>
+                        <GradientStop Color="#FFDDDDDD" Offset="0.515"/>
+                        <GradientStop Color="#FF7A9EA8" Offset="0.837"/>
+                        <GradientStop Color="#FF14B682" Offset="0.996"/>
+                    </LinearGradientBrush>
+                </ComboBox.Background>
+
+            </ComboBox>
 
         </Grid>
         <Grid x:Name="boczne" Grid.Column="1" Grid.Row="1">
