--- a/SWD/SWD/MainWindow.xaml
+++ b/SWD/SWD/MainWindow.xaml
@@ -396,6 +396,7 @@
             <Button Grid.Row="2" VerticalAlignment="Bottom" Name="zapisz" Height="50" Foreground="#FF327583" BorderBrush="{x:Null}" Margin="1,0,1,1" VerticalContentAlignment="Top" Background="#FFCEDFE4" Click="zapisz_Click">
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center" Margin=" 0,5,0,0" Foreground="#FF327583" FontSize="20">ZAPISZ PLIK</Label>
             </Button>
+            <TextBox x:Name="k_grupowanie_kolumny" BorderThickness="0,1,0,0" Margin="37,50,121,310" Grid.Row="2"/>
         </Grid>
 
 
